--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,11 @@
 @import './common';
-@import './example';
+@import './header';
+@import './hero';
+@import './products';
+@import './about';
+@import './advantages';
+@import './gallery';
+@import './contacts';
+@import './customer-reviews';
+@import './footer';
+@import './modals';
