--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,1 +1,52 @@
-
+<header class="page-header">
+  <div class="page-header__container container">
+    <a class="logo page-header__logo link" href="./index.html"
+      >Web<span class="logo__span--dark">Studio</span></a
+    >
+    <nav class="navigation">
+      <ul class="navigation__list list">
+        <li class="navigation__item">
+          <a
+            class="navigation__link navigation__link--current link"
+            href="./index.html"
+            >Студія</a
+          >
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link link" href=""> Портфоліо</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link link" href="#contacts">Контакти</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="contact__list list">
+      <li class="contact__item">
+        <a class="contact__link link" href="mailto:info@devstudio.com">
+          <svg class="contact__icon" width="16" height="12">
+            <!-- <use href="./images/icons.svg#envelope"></use> -->
+          </svg>
+          info@devstudio.com</a
+        >
+      </li>
+      <li class="contact__item">
+        <a class="contact__link link" href="tel:+380961111111">
+          <svg class="contact__icon" width="10" height="16">
+            <!-- <use href="./images/icons.svg#smartphone"></use> -->
+          </svg>
+          +38 096 111 11 11</a
+        >
+      </li>
+    </ul>
+    <button
+      type="button"
+      class="menu-btn js-open-menu"
+      aria-expanded="false"
+      aria-controls="mobile-menu"
+    >
+      <svg width="40px" height="40px">
+        <!-- <use href="./images/icons.svg#menu-open"></use> -->
+      </svg>
+    </button>
+  </div>
+</header>
