--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,24 +1,16 @@
-<!-- <section class="about">
+<section class="about">
   <p class="about__uppertitle">tradition and love</p>
   <h2 class="about__title">how it's made</h2>
   <div class="about__shape">
-    <img src="" alt="picture of a cow" width="279" class="about__image" />
+    <!-- <img src="" alt="picture of a cow" width="279" class="about__image" /> -->
   </div>
-  <p class="about__text">
-    Ice is a place where you will become not only a little happier, but also
-    healthier. Health is the main value for us, and we follow it when creating
-    our handmade desserts.
-  </p>
-  <p class="about__text">
-    We use traditional recipes and 100% natural ingredients. Our products are so
-    natural that they can be given to children from the age of three years.
-    Sweets lovers can expect 55 types of ice cream, 15 types of coffee and 23
-    milkshakes.
-  </p>
+  <p class="about__text"></p>
+  <p class="about__text"></p>
+  <p class="about__text"></p>
   <button type="button" class="about__button">
     Read More
     <svg class="about__icon" width="12" height="12">
-      <use href=""></use>
+      <!-- <use href=""></use> -->
     </svg>
   </button>
-</section> -->
+</section>
