--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,52 +1,38 @@
-<header class="page-header">
-  <div class="page-header__container container">
-    <a class="logo page-header__logo link" href="./index.html"
-      >Web<span class="logo__span--dark">Studio</span></a
-    >
-    <nav class="navigation">
-      <ul class="navigation__list list">
-        <li class="navigation__item">
-          <a
-            class="navigation__link navigation__link--current link"
-            href="./index.html"
-            >Студія</a
-          >
-        </li>
-        <li class="navigation__item">
-          <a class="navigation__link link" href=""> Портфоліо</a>
-        </li>
-        <li class="navigation__item">
-          <a class="navigation__link link" href="#contacts">Контакти</a>
-        </li>
-      </ul>
-    </nav>
-    <ul class="contact__list list">
-      <li class="contact__item">
-        <a class="contact__link link" href="mailto:info@devstudio.com">
-          <svg class="contact__icon" width="16" height="12">
-            <!-- <use href="./images/icons.svg#envelope"></use> -->
-          </svg>
-          info@devstudio.com</a
-        >
-      </li>
-      <li class="contact__item">
-        <a class="contact__link link" href="tel:+380961111111">
-          <svg class="contact__icon" width="10" height="16">
-            <!-- <use href="./images/icons.svg#smartphone"></use> -->
-          </svg>
-          +38 096 111 11 11</a
-        >
-      </li>
-    </ul>
-    <button
-      type="button"
-      class="menu-btn js-open-menu"
-      aria-expanded="false"
-      aria-controls="mobile-menu"
-    >
-      <svg width="40px" height="40px">
-        <!-- <use href="./images/icons.svg#menu-open"></use> -->
-      </svg>
-    </button>
-  </div>
-</header>
+<section class="advantages">
+  <h2 class="visually-hidden">Our Advantages</h2>
+  <ul class="advantages__list">
+    <li class="advantages__item">
+      <div class="advantages__circle">
+        <svg class="advantages__icon" width="36" height="36">
+          <!-- <use href=""></use> -->
+        </svg>
+      </div>
+      <p class="advantages__attribute">721</p>
+      <p class="advantages__text">
+        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      </p>
+    </li>
+    <li class="advantages__item">
+      <div class="advantages__circle">
+        <svg class="advantages__icon" width="36" height="36">
+          <!-- <use href=""></use> -->
+        </svg>
+      </div>
+      <p class="advantages__attribute">16 KG</p>
+      <p class="advantages__text">
+        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      </p>
+    </li>
+    <li class="advantages__item">
+      <div class="advantages__circle">
+        <svg class="advantages__icon" width="36" height="36">
+          <!-- <use href=""></use> -->
+        </svg>
+      </div>
+      <p class="advantages__attribute">84</p>
+      <p class="advantages__text">
+        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      </p>
+    </li>
+  </ul>
+</section>
