--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,37 +3,42 @@
     <h2 class="gallery__title visually-hidden">Gallery</h2>
     <ul class="gallery__list list gallery-slider">
       <li class="gallery__item">
-        <!-- <picture>
-            <source srcset=" 1x, 2x" type="image/webp" media="(min-width: 1200px)">
-            <source srcset=" 1x, 2x" type="image/jpeg" media="(min-width: 1200px)">
-            <source srcset=" 1x, 2x" type="image/webp" media="(min-width: 768px)">
-            <source srcset=" 1x, 2x" type="image/jpeg" media="(min-width: 768px)">
-            <source srcset=" 1x, 2x" type="image/webp">
-            <source srcset=" 1x, 2x" type="image/jpeg">
-            <img class="image" src="" alt="ice-cream picture 1">
-          </picture> -->
+        <picture>
+          <!-- <source srcset=" 1x, 2x" type="image/webp" media="(min-width: 1200px)"> -->
+          <source srcset="./images/gallery/gallery.img1.desc_@1x.jpg 1x, ./images/gallery/gallery.img1.desc_@2x.jpg 2x"
+            type="image/jpeg" media="(min-width: 1200px)">
+          <!-- <source srcset=" 1x, 2x" type="image/webp" media="(min-width: 768px)"> -->
+          <source
+            srcset="./images/gallery/gallery.img1.tablet_@1x.jpg 1x, ./images/gallery/gallery.img1.tablet_@2x.jpg 2x"
+            type="image/jpeg" media="(min-width: 768px)">
+          <!-- <source srcset=" 1x, 2x" type="image/webp"> -->
+          <source
+            srcset="./images/gallery/gallery.img1.mobile_@1x.jpg 1x, ./images/gallery/gallery.img1.mobile_@2x.jpg 2x"
+            type="image/jpeg">
+          <img class="image" src="./images/gallery/gallery.img1.mobile_@1x.jpg" alt="ice-cream picture 1">
+        </picture>
       </li>
       <li class="gallery__item">
-        <!-- <picture>
-            <source srcset=" 1x, 2x" type="image/webp" media="(min-width: 1200px)">
+        <picture>
+          <!-- <source srcset=" 1x, 2x" type="image/webp" media="(min-width: 1200px)">
             <source srcset=" 1x, 2x" type="image/jpeg" media="(min-width: 1200px)">
             <source srcset=" 1x, 2x" type="image/webp" media="(min-width: 768px)">
             <source srcset=" 1x, 2x" type="image/jpeg" media="(min-width: 768px)">
             <source srcset=" 1x, 2x" type="image/webp">
             <source srcset=" 1x, 2x" type="image/jpeg">
-            <img class="image" src="" alt="ice-cream picture 2">
-          </picture> -->
+          <img class="image" src="./images/gallery/gallery.img2_@1x.jpg" alt="ice-cream picture 2"> -->
+        </picture>
       </li>
       <li class="gallery__item">
-        <!-- <picture>
-            <source srcset=" 1x, 2x" type="image/webp" media="(min-width: 1200px)">
+        <picture>
+          <!-- <source srcset=" 1x, 2x" type="image/webp" media="(min-width: 1200px)">
             <source srcset=" 1x, 2x" type="image/jpeg" media="(min-width: 1200px)">
             <source srcset=" 1x, 2x" type="image/webp" media="(min-width: 768px)">
             <source srcset=" 1x, 2x" type="image/jpeg" media="(min-width: 768px)">
             <source srcset=" 1x, 2x" type="image/webp">
             <source srcset=" 1x, 2x" type="image/jpeg">
-            <img class="image" src="" alt="ice-cream picture 3">
-          </picture> -->
+          <img class="image" src="./images/gallery/gallery.img3_@1x.jpg" alt="ice-cream picture 3"> -->
+        </picture>
       </li>
     </ul>
   </div>
@@ -44,11 +49,12 @@
     <h2 class="reviews__title visually-hidden">Reviews</h2>
     <ul class="reviews-list list reviews-slider">
       <li class="reviews__item">
-        <!-- <picture>
-            <source srcset="" type="image/webp">
-            <source srcset="" type="image/jpeg">
-            <img src="" alt="Emily from Fos Angeles" width="85" class="image">
-          </picture> -->
+        <picture>
+          <!-- <source srcset="" type="image/webp"> -->
+          <source srcset="./images/customer/customer.img1_@1x.jpg 1x, ./images/customer/customer.img1_@2x.jpg 2x"
+            type="image/jpeg">
+          <img src="./images/customer/customer.img1_@1x.jpg" alt="Emily from Fos Angeles" width="85" class="image">
+        </picture>
         <p class="reviews__description">
           I love visiting your cafe. You prepare the most delicious ice cream in
           Los Angeles! In addition, you have beautiful serving, cozy atmosphere
@@ -57,11 +63,12 @@
         <h3 class="reviews__heading">Emily, Los Angeles</h3>
       </li>
       <li class="reviews__item">
-        <!-- <picture>
-            <source srcset="" type="image/webp">
-            <source srcset="" type="image/jpeg">
-            <img src="" alt="Sam from Fos Angeles" width="85" class="image">
-          </picture> -->
+        <picture>
+          <!-- <source srcset="" type="image/webp"> -->
+          <source srcset="./images/customer/customer.img2_@1x.jpg 1x, ./images/customer/customer.img2_@2x.jpg 2x"
+            type="image/jpeg">
+          <img src="./images/customer/customer.img2_@1x.jpg" alt="Emily from Fos Angeles" width="85" class="image">
+        </picture>
         <p class="reviews__description">
           I love eating popsicles on a hot day. Yours is always delicious. I
           recommend your cafe to everyone I know.
@@ -69,11 +76,12 @@
         <h3 class="reviews__heading">Sam, Los Angeles</h3>
       </li>
       <li class="reviews__item">
-        <!-- <picture>
-            <source srcset="" type="image/webp">
-            <source srcset="" type="image/jpeg">
-            <img src="" alt="Diana from Fos Chicago" width="85" class="image">
-          </picture> -->
+        <picture>
+          <!-- <source srcset="" type="image/webp"> -->
+          <source srcset="./images/customer/customer.img3_@1x.jpg 1x, ./images/customer/customer.img3_@2x.jpg 2x"
+            type="image/jpeg">
+          <img src="./images/customer/customer.img3_@1x.jpg" alt="Emily from Fos Angeles" width="85" class="image">
+        </picture>
         <p class="reviews__description">
           Ice cream is my passion! I love your chocolate hazelnut ice cream! And
           I really like the excellent service - always served politely and
@@ -82,11 +90,12 @@
         <h3 class="reviews__heading">Diana, Chicago</h3>
       </li>
       <li class="reviews__item">
-        <!-- <picture>
-            <source srcset="" type="image/webp">
-            <source srcset="" type="image/jpeg">
-            <img src="" alt="Bryan from New-York" width="85" class="image">
-          </picture> -->
+        <picture>
+          <!-- <source srcset="" type="image/webp"> -->
+          <source srcset="./images/customer/customer.img4_@1x.jpg 1x, ./images/customer/customer.img4_@2x.jpg 2x"
+            type="image/jpeg">
+          <img src="./images/customer/customer.img4_@1x.jpg" alt="Emily from Fos Angeles" width="85" class="image">
+        </picture>
         <p class="reviews__description">
           Every day we come to you with friends after classes in college. We
           love your ice cream and casual atmosphere!
