изменила разметку, названия по бам

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,93 +1,92 @@
 <section class="section__contacts">
-    <div class="container">
-        <h2 class="visually-hidden">Our contacts</h2>
+  <div class="container">
+    <h2 class="visually-hidden">Our contacts</h2>
 
+    <div class="contacts">
+      <ul class="list contacts__list">
+        <li class="contacts__item">
+          <ul class="list contacts__chapter">
+            <li class="contacts__category">
+              <p class="contacts__representation">CAFE</p>
+            </li>
+            <li class="contacts__city">
+              <p class="">Chicago</p>
+            </li>
+            <li class="contacts__address">
+              10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA
+            </li>
+            <li class="contacts-timetable">
+              <p class="contacts-timetable__day">Monday - Friday</p>
+              <p class="contacts-timetable__time">06:00 AM - 10:00 PM</p>
+              <p class="contacts-timetable__day">Saturday - Sunday</p>
+              <p class="contacts-timetable__time">08:00 AM - 16:00 PM</p>
+            </li>
+            <li class="contacts-info">
+              <a class="contacts-info__tel" href="tel:+61(0)383766284"
+                >+61(0) 383 766 284</a
+              >
+              <a class="contacts-info__mail" href="mailto:noreply@envato.com"
+                >noreply@envato.com</a
+              >
+            </li>
+          </ul>
+        </li>
 
-        <div class="contacts">
-            <ul class="list">
-                <li class="contacts__item">
-                    <div class="location">
-                        <div class="category">
-                            <p class="representation">CAFE</p>
-                        </div>
-                        <p>Chicago</p>
-                        <div class="address_style">
-                            <p class="address">
-                                10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA
-                            </p>
-                        </div>
-                    </div>
+        <li class="contacts__item">
+          <ul class="list contacts__chapter">
+            <li class="contacts__category">
+              <p class="contacts__representation">FOODTRUCK</p>
+            </li>
+            <li class="contacts__city">
+              <p class="">Los Angeles</p>
+            </li>
+            <li class="contacts__address">
+              1003 Manhattan Ave, Manhattan Beach, CA 90263, USA
+            </li>
+            <li class="contacts-timetable">
+              <p class="contacts-timetable__day">Monday - Friday</p>
+              <p class="contacts-timetable__time">06:00 AM - 10:00 PM</p>
+              <p class="contacts-timetable__day">Saturday - Sunday</p>
+              <p class="contacts-timetable__time">08:00 AM - 16:00 PM</p>
+            </li>
+            <li class="contacts-info">
+              <a class="contacts-info__tel" href="tel:+61(0)383766284"
+                >+61(0) 383 766 284</a
+              >
+              <a class="contacts-info__mail" href="mailto:noreply@envato.com"
+                >noreply@envato.com</a
+              >
+            </li>
+          </ul>
+        </li>
 
-                    <div class="work_time">
-                        <p>Monday - Friday</p>
-                        <p>06:00 AM - 10:00 PM</p>
-                        <p>Saturday - Sunday</p>
-                        <p>08:00 AM - 16:00 PM</p>
-                    </div>
+        <li class="contacts__item">
+        <ul class="list contacts__chapter">
+            <li class="contacts__category">
+                <p class="contacts__representation">CAFE</p>
+            </li>
+            <li class="contacts__city">
+                <p class="">New York</p>
+            </li>
+            <li class="contacts__address">
+                726 Sterling Pl, Brooklyn, NY 11222, USA
+            </li>
+            <li class="contacts-timetable">
+                <p class="contacts-timetable__day">Monday - Friday</p>
+                <p class="contacts-timetable__time">06:00 AM - 10:00 PM</p>
+                <p class="contacts-timetable__day">Saturday - Sunday</p>
+                <p class="contacts-timetable__time">08:00 AM - 16:00 PM</p>
+            </li>
+            <li class="contacts-info">
+                <a class="contacts-info__tel" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+                <a class="contacts-info__mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
+            </li>
+        </ul>
+        </li>
+      </ul>
 
-                    <ul class="list">
-                        <li><a class="link" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
-                        <li><a class="link" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
-                    </ul>
-                </li>
-
-                <li class="contacts__item">
-                    <div class="location">
-                        <div class="category">
-                            <p class="representation">FOODTRUCK</p>
-                        </div>
-                        <p>Los Angeles</p>
-                        <div class="address_style">
-                            <p class="address">
-                                1003 Manhattan Ave, Manhattan Beach, CA 90263, USA
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="work_time">
-                        <p>Monday - Friday</p>
-                        <p>06:00 AM - 10:00 PM</p>
-                        <p>Saturday - Sunday</p>
-                        <p>08:00 AM - 16:00 PM</p>
-                    </div>
-
-                    <ul class="list">
-                        <li><a class="link" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
-                        <li><a class="link" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
-                    </ul>
-                </li>
-
-                <li class="contacts__item">
-                    <div class="location">
-                        <div class="category">
-                            <p class="representation">CAFE</p>
-                        </div>
-                        <p>New York</p>
-                        <div class="address_style">
-                            <p class="address">
-                                726 Sterling Pl, Brooklyn, NY 11222, USA
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="work_time">
-                        <p>Monday - Friday</p>
-                        <p>06:00 AM - 10:00 PM</p>
-                        <p>Saturday - Sunday</p>
-                        <p>08:00 AM - 16:00 PM</p>
-                    </div>
-
-                    <ul class="list">
-                        <li><a class="link" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
-                        <li><a class="link" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
-                    </ul>
-                </li>
-            </ul>
-
-            <button type="button" class="btn_location">Our Locations</button>
-            <button type="button" class="btn_franchise">Franchise</button>
-        </div>
-
-
+      <button type="button" class="btn_location">Our Locations</button>
+      <button type="button" class="btn_franchise">Franchise</button>
     </div>
+  </div>
 </section>
