--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -18,7 +18,7 @@
 @import './layouts/products';
 @import './layouts/about';
 @import './layouts/advantages';
-@import './gallery';
+@import './layouts/gallery';
 @import './layouts/contacts';
 @import './layouts/customer-reviews';
 @import './layouts/footer';
