delete class item

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -3,7 +3,7 @@
     <strong class="products__label-title">100% natural</strong>
     <h2 class="products__title">Products</h2>
     <ul class="list products__list">
-      <li class="item product ice-cream">
+      <li class="product ice-cream">
         <div class="picture-container ice-cream__picture-container">
           <img
             class="img"
@@ -17,7 +17,7 @@
           natural stabilizer
         </p>
       </li>
-      <li class="item product ice-coffee">
+      <li class="product ice-coffee">
         <div class="picture-container ice-coffee__picture-container">
           <img
             class="img"
@@ -31,7 +31,7 @@
           without the use of preservatives and flavor enhancers
         </p>
       </li>
-      <li class="item product milkshak">
+      <li class="product milkshak">
         <div class="picture-container milkshak__picture-container">
           <img
             class="img"
