--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,6 @@
 <section class="advantages">
   <div class="container">
-    <ul class="advantages__list">
+    <ul class="advantages__list list">
       <li class="advantages__item">
         <div class="advantages__circle">
           <svg class="advantages__icon" width="36" height="36">
