additional small fixes
just some paddings and an image
-Anastasia Demianenko

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,10 +1,10 @@
-<section class="about">
+<section class="about section">
   <div class="container">
     <p class="about__uppertitle">tradition and love</p>
     <h2 class="about__title">how it's made?</h2>
     <div class="about__inline">
       <div class="about__shape">
-        <!-- <img src="" alt="picture of a cow" width="279" class="about__image"> -->
+        <img src="./images/about/cow.desc_@1x.png" alt="picture of a cow" width="279" class="about__image">
       </div>
       <p class="about__uppertext">Ice is a place where you will become not only a little happier, but also healthier. Health is the main value for us, and we follow it when creating our handmade desserts. </p>
       <p class="about__text">We use traditional recipes and 100% natural ingredients. Our products are so natural that they can be given to children from the age of three years. Sweets lovers can expect 55 types of ice cream, 15 types of coffee and 23 milkshakes.</p>
