--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section class="advantages section">
   <div class="container">
     <ul class="advantages__list list">
       <li class="advantages__item">
