добавила section, удалила div

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,8 @@
+<section class="section__contacts">
 <div class="container">
     <h2 class="visually-hidden">Our contacts</h2>
 
-    <div class="contacts">
+    
         <ul class="list contacts__list">
             <li class="contacts__item">
                 <ul class="list contacts__chapter">
@@ -78,6 +79,5 @@
             
             <button type="button" class="btn_location">Our Locations</button>
             <button type="button" class="btn_franchise">Franchise</button>
-            </div>
             </div>
             </section>
