add more styles
to sections about and advantages
- Anastasia Demianenko

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -4,7 +4,7 @@
       <li class="advantages__item">
         <div class="advantages__circle">
           <svg class="advantages__icon" width="36" height="36">
-            <!-- <use href=""></use> -->
+            <!-- <use href="./images/advantages/cow.sec.adv_@1x.png"></use> -->
           </svg>
         </div>
         <p class="advantages__point">721</p>
