--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -3,6 +3,9 @@
   color: #fcfcfc;
   text-align: center;
 
+  &.section {
+    padding-top: 0px;
+  }
   &__point {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
