add modal windows

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -10,7 +10,7 @@
       </div>
       <p class="about__uppertext">Ice is a place where you will become not only a little happier, but also healthier. Health is the main value for us, and we follow it when creating our handmade desserts. </p>
       <p class="about__text">We use traditional recipes and 100% natural ingredients. Our products are so natural that they can be given to children from the age of three years. Sweets lovers can expect 55 types of ice cream, 15 types of coffee and 23 milkshakes.</p>
-      <button type="button" class="about__button">Read More
+      <button type="button" data-modal="how-made" class="about__button open-modal js-open-modal">Read More
         <svg class="about__icon" width="12" height="12">
           <use href="./images/svg/symbol-defs.svg#black-arrow"></use>
         </svg>
