--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -77,7 +77,7 @@
             </li>
             </ul>
             
-            <button type="button" class="btn_location">Our Locations</button>
-            <button type="button" class="btn_franchise">Franchise</button>
+            <button type="button" data-modal="locations" class="btn_location open-modal js-open-modal">Our Locations</button>
+            <button type="button" data-modal="franchise" class="btn_franchise open-modal js-open-modal">Franchise</button>
             </div>
             </section>
