--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,6 +23,6 @@
       </ul>
     </nav>
 
-    <button type="button">Buy now</button>
+      <button type="button" data-modal="buy-now" class="open-modal js-open-modal">Buy Now</button>
   </div>
 </header>
