--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,8 @@
 // utils styles
 @import './common';
 @import './utils/variables';
+@import './utils/fonts';
+
 
 // @import './utils/normalize';
 @import './utils/visually-hidden';
