add base styles

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,6 +1,10 @@
-// body {
+body {
+  background-color: #84a178;
+  font-family: 'Montserrat';
+  font-style: normal;
+  color: #fcfcfc;
+}
 
-// }
 img {
   display: block;
   max-width: 100%;
