--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,9 +1,8 @@
 :root {
-  // --primery-text-color: #757575;
-  // --primery-accent-color: #2196f3;
-  // --primery-title-color: #212121;
-  // --primery-white-color: #ffffff;
-  // --logo-link-color: #afb1b8;
+  --primery-text-color: #FCFCFC;
+  --primery-accent-color: #F8D24E;
+  --primery-title-color: #131313;
+  --primery-title-font: font-family: 'Seymour One';
   --main-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
