add adaptation and buttons

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,49 +1,169 @@
-<section class="products">
-  <div class="container products__content">
+<section class="container products">
+  <div class="products__content">
     <strong class="products__label-title">100% natural</strong>
     <h2 class="products__title">Products</h2>
     <ul class="list products__list">
       <li class="product ice-cream">
         <div class="picture-container ice-cream__picture-container">
-          <img
-            class="img"
-            src="./images/products/Ice-cream.sec.2.mobile_@1x.png"
-            alt="ice-cream"
-          />
+          <picture>
+            <source
+              srcset="
+                ./images/products/Ice-cream.sec.2_@1x.png 1x,
+                ./images/products/Ice-cream.sec.2_@2x.png 2x
+              "
+              media="(min-width: 1200px)"
+            />
+            <source
+              srcset="
+                ./images/products/Ice-cream.sec.2.tablet_@1x.png 1x,
+                ./images/products/Ice-cream.sec.2.tablet_@2x.png 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <img
+              class="img"
+              srcset="
+                ./images/products/Ice-cream.sec.2.mobile_@1x.png 1x,
+                ./images/products/Ice-cream.sec.2.mobile_@2x.png 2x
+              "
+              src="./images/products/Ice-cream.sec.2.mobile_@1x.png"
+              alt="ice-cream"
+            />
+          </picture>
         </div>
         <h3 class="product__title">ice cream</h3>
         <p class="product__text">
           Soft ice cream with a delicate taste. Made with milk, cream, sugar and
           natural stabilizer
         </p>
+        <button
+          class="button product__button open-modal js-open-modal"
+          data-modal="buy-now_ingredients"
+          type="button"
+        >
+          <svg class="icon-button" width="40px" height="15px">
+            <use
+              class="arrow arrow--default"
+              href="./images/svg/symbol-defs.svg#icon-default-arrow"
+            ></use>
+            <use
+              class="arrow arrow--hover"
+              href="./images/svg/symbol-defs.svg#icon-hover-arrow"
+            ></use>
+            <use
+              class="arrow arrow--focus"
+              href="./images/svg/symbol-defs.svg#icon-focus-arrow"
+            ></use>
+          </svg>
+        </button>
       </li>
       <li class="product ice-coffee">
         <div class="picture-container ice-coffee__picture-container">
-          <img
-            class="img"
-            src="./images/products/Ice-coffe.sec.2.mobile_@1x.png"
-            alt="ice-coffee"
-          />
+          <picture>
+            <source
+              srcset="
+                ./images/products/Ice-coffe.sec.2_@1x.png 1x,
+                ./images/products/Ice-coffe.sec.2_@2x.png 2x
+              "
+              media="(min-width: 1200px)"
+            />
+            <source
+              srcset="
+                ./images/products/Ice-coffe.sec.2.tablet_@1x.png 1x,
+                ./images/products/Ice-coffe.sec.2.tablet_@2x.png 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <img
+              class="img"
+              srcset="
+                ./images/products/Ice-coffe.sec.2.mobile_@1x.png 1x,
+                ./images/products/Ice-coffe.sec.2.mobile_@2x.png 2x
+              "
+              src="./images/products/Ice-cream.sec.2.mobile_@1x.png"
+              alt="ice-coffee"
+            />
+          </picture>
         </div>
         <h3 class="product__title">ice coffee</h3>
         <p class="product__text">
           Fragrant invigorating drink created from 100% natural ingredients
           without the use of preservatives and flavor enhancers
         </p>
+        <button
+          class="button product__button open-modal js-open-modal"
+          data-modal="buy-now_ingredients"
+          type="button"
+        >
+          <svg class="icon-button" width="40px" height="15px">
+            <use
+              class="arrow arrow--default"
+              href="./images/svg/symbol-defs.svg#icon-default-arrow"
+            ></use>
+            <use
+              class="arrow arrow--hover"
+              href="./images/svg/symbol-defs.svg#icon-hover-arrow"
+            ></use>
+            <use
+              class="arrow arrow--focus"
+              href="./images/svg/symbol-defs.svg#icon-focus-arrow"
+            ></use>
+          </svg>
+        </button>
       </li>
-      <li class="product milkshak">
-        <div class="picture-container milkshak__picture-container">
-          <img
-            class="img"
-            src="./images/products/Milkshakes.sec.2.mobile_@1x.png"
-            alt="milkshak"
-          />
+      <li class="product milkshake">
+        <div class="picture-container milkshake__picture-container">
+          <picture>
+            <source
+              srcset="
+                ./images/products/Milkshakes.sec.2_@1x.png 1x,
+                ./images/products/Milkshakes.sec.2_@2x.png 2x
+              "
+              media="(min-width: 1200px)"
+            />
+            <source
+              srcset="
+                ./images/products/Milkshakes.sec.2.tablet_@1x.png 1x,
+                ./images/products/Milkshakes.sec.2.tablet_@2x.png 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <img
+              class="img"
+              srcset="
+                ./images/products/Milkshakes.sec.2.mobile_@1x.png 1x,
+                ./images/products/Milkshakes.sec.2.mobile_@2x.png 2x
+              "
+              src="./images/products/Milkshakes.sec.2.mobile_@1x.png"
+              alt="milkshake"
+            />
+          </picture>
         </div>
-        <h3 class="product__title">ice cream</h3>
+        <h3 class="product__title">milkshakes</h3>
         <p class="product__text">
-          Soft ice cream with a delicate taste. Made with milk, cream, sugar and
-          natural stabilizer
+          Sweet drinks based on milk and ice cream, supplemented with syrups,
+          fruits, berries and other sweets of your choice
         </p>
+        <button
+          class="button product__button open-modal js-open-modal"
+          data-modal="buy-now_ingredients"
+          type="button"
+        >
+          <svg class="icon-button" width="40px" height="15px">
+            <use
+              class="arrow arrow--default"
+              href="./images/svg/symbol-defs.svg#icon-default-arrow"
+            ></use>
+            <use
+              class="arrow arrow--hover"
+              href="./images/svg/symbol-defs.svg#icon-hover-arrow"
+            ></use>
+            <use
+              class="arrow arrow--focus"
+              href="./images/svg/symbol-defs.svg#icon-focus-arrow"
+            ></use>
+          </svg>
+        </button>
       </li>
     </ul>
   </div>
