--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -4,13 +4,48 @@
   text-align: center;
   padding-top: 60px;
   padding-bottom: 60px;
-  padding-right: 20px;
-  padding-left: 20px;
 
-  background-image: url(../images/bg/bg-ice-cream.sec4.mobile_@1x.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  &__content {
+    max-width: 1200px;
+  }
+  @media screen and (max-width: 767px) {
+    max-width: 480px;
+    background-size: contain;
+    background-position: top;
+    background-repeat: repeat;
+    background-image: url(../images/bg/bg.sec2.mobile_@1x.png);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/bg/bg.sec2.mobile_@2x.png);
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(../images/bg/bg.sec.2.tablet_@1x.png);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/bg/bg.sec.2.tablet_@2x.png);
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+    max-width: 1600px;
+    background-image: url(../images/bg/bg.sec.2_@1x.png);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/bg/bg.sec.2_@2x.png);
+    }
+  }
 
   &__label-title {
     margin-bottom: 12px;
@@ -23,7 +58,19 @@
     text-transform: uppercase;
 
     color: #131313;
+
+    @media screen and (min-width: 768px) {
+      font-size: 22px;
+      line-height: 27px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      font-size: 30px;
+      line-height: 37px;
+      letter-spacing: 0.04em;
+    }
   }
+
   &__title {
     margin-bottom: 148px;
 
@@ -37,6 +84,21 @@
     text-transform: uppercase;
 
     color: #131313;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 140px;
+
+      font-size: 34px;
+      line-height: 43px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 230px;
+
+      font-size: 36px;
+      line-height: 45px;
+      letter-spacing: 0.06em;
+    }
   }
 }
 .picture-container {
@@ -46,8 +108,20 @@
   transform: translateY(-50%);
   border-radius: 50%;
 
+  @media screen and (min-width: 768px) {
+    margin-bottom: -60px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: -80px;
+    max-width: 300px;
+  }
+
   & .img {
     transform: translateY(-11px);
+
+    @media screen and (min-width: 1200px) {
+      transform: translateY(-17px);
+    }
   }
 }
 .ice-cream {
@@ -78,7 +152,7 @@
   }
 }
 
-.milkshak {
+.milkshake {
   background-color: #d6936d;
 
   &__picture-container {
@@ -91,16 +165,29 @@
     box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
   }
 }
-
 .product {
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 164px;
   padding-right: 40px;
   padding-left: 40px;
   padding-bottom: 5px;
 
   border-radius: 24px;
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 164px;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    padding-right: 26px;
+    padding-left: 26px;
+    min-height: 428px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-right: 64px;
+    padding-left: 64px;
+    min-height: 535px;
+  }
 
   &__title {
     margin-bottom: 40px;
@@ -114,6 +201,17 @@
     text-transform: uppercase;
 
     color: #131313;
+
+    @media screen and (min-width: 768px) {
+      font-size: 22px;
+      line-height: 27px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 65px;
+
+      font-size: 30px;
+      line-height: 37px;
+    }
   }
   &__text {
     margin-bottom: 110px;
@@ -127,6 +225,35 @@
     letter-spacing: 0.04em;
 
     color: #131313;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: auto;
+    }
+    @media screen and (min-width: 1200px) {
+      font-size: 16px;
+    }
+  }
+}
+
+.products__list {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+
+    & .product {
+      flex-basis: calc((100% - 2 * 16px) / 3);
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+
+    & .product {
+      flex-basis: calc((100% - 2 * 32px) / 3);
+    }
   }
 }
 .product__button {
@@ -158,5 +285,9 @@
     .arrow--focus {
       opacity: 1;
     }
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 40px;
   }
 }
