--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,17 +2,36 @@
   <div class="container">
     <div class="about__titles">
       <p class="about__uppertitle">tradition and love</p>
-    <h2 class="about__title">how it's made?</h2>
+      <h2 class="about__title">how it's made?</h2>
     </div>
     <div class="about__inline">
       <div class="about__shape">
-        <img src="./images/about/cow.mobile_@1x.png" alt="picture of a cow" width="279" class="about__image">
+        <img
+          src="./images/about/cow.mobile_@1x.png"
+          alt="picture of a cow"
+          width="279"
+          class="about__image"
+        />
       </div>
-      <p class="about__uppertext">Ice is a place where you will become not only a little happier, but also healthier. Health is the main value for us, and we follow it when creating our handmade desserts. </p>
-      <p class="about__text">We use traditional recipes and 100% natural ingredients. Our products are so natural that they can be given to children from the age of three years. Sweets lovers can expect 55 types of ice cream, 15 types of coffee and 23 milkshakes.</p>
-      <button type="button" data-modal="how-made" class="about__button open-modal js-open-modal">Read More
+      <p class="about__uppertext">
+        Ice is a place where you will become not only a little happier, but also
+        healthier. Health is the main value for us, and we follow it when
+        creating our handmade desserts.
+      </p>
+      <p class="about__text">
+        We use traditional recipes and 100% natural ingredients. Our products
+        are so natural that they can be given to children from the age of three
+        years. Sweets lovers can expect 55 types of ice cream, 15 types of
+        coffee and 23 milkshakes.
+      </p>
+      <button
+        type="button"
+        data-modal="how-made"
+        class="about__button open-modal js-open-modal"
+      >
+        Read More
         <svg class="about__icon" width="12" height="12">
-          <use href="./images/svg/symbol-defs.svg#black-arrow"></use>
+          <use href="../images/svg/symbol-defs.svg#black-arrow"></use>
         </svg>
       </button>
     </div>
