--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,7 +3,6 @@
 @import './utils/variables';
 @import './utils/fonts';
 
-
 // @import './utils/normalize';
 @import './utils/visually-hidden';
 @import './utils/placeholders';
@@ -27,3 +26,4 @@
 @import './layouts/modals';
 
 // components styles
+@import './btn';
