--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,6 +1,13 @@
 :root {
   --primery-text-color: #FCFCFC;
   --primery-accent-color: #F8D24E;
+  --primery-border-color: #F8D24E;
+  --primery-hover-color: #0a8a17;
+  --primery-br-hover-color: #0a8a17;
+  --primery-focus-color: #fcfcfc;
+  --primery-br-focus-color: #fcfcfc;
+  --primery-disabled-color: #ababab;
+  --primery-br-disabled-color: #ababab;
   --primery-title-color: #131313;
   --primery-title-font: font-family: 'Seymour One';
   --main-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
