--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,28 +1,40 @@
-<header>
-  <div>
-    <a href="./index.html">
-      <svg width="60" height="65">
-        <use></use>
-      </svg>
+<header class="header">
+  <div class="container header__container">
+    <a class="header__logo-link" href="./index.html">
+      <img
+        class="header__logo img"
+        srcset="
+          ./images/header/logo.mobile_@1x.png  41w,
+          ./images/header/logo.tablet_@1x.png  48w,
+          ./images/header/Logo.desc_@1x.png    60w,
+          ./images/header/logo.mobile_@2x.png  81w,
+          ./images/header/logo.tablet_@2x.png  96w,
+          ./images/header/Logo.desc_@2x.png   120w
+        "
+        sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (min-width: 480px) 41px, (max-width: 479px) 41px,
+                100vw"
+        src="./images/header/logo.mobile_@1x.png"
+        alt="header-logo"
+      />
     </a>
 
-    <nav>
-      <ul>
-        <li>
-          <a href="./index.html">Home</a>
+    <nav class="header__nav">
+      <ul class="header__list list">
+        <li class="header__list-item">
+          <a class="header__link link" href="./index.html">Home</a>
         </li>
-        <li>
-          <a href="#about">How it’s made?</a>
+        <li class="header__list-item">
+          <a class="header__link link" href="#about">How it’s made?</a>
         </li>
-        <li>
-          <a href="#products">Our products</a>
+        <li class="header__list-item">
+          <a class="header__link link" href="#products">Our products</a>
         </li>
-        <li>
-          <a href="#contacts">Contact</a>
+        <li class="header__list-item">
+          <a class="header__link link" href="#contacts">Contact</a>
         </li>
       </ul>
     </nav>
 
-    <button type="button">Buy now</button>
+    <button class="header__btn" type="button">Buy now</button>
   </div>
 </header>
