--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,7 @@
           ./images/header/logo.tablet_@2x.png  96w,
           ./images/header/Logo.desc_@2x.png   120w
         "
-        sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (min-width: 480px) 41px, (max-width: 479px) 41px,
+        sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (min-width: 480px) 41px,
                 100vw"
         src="./images/header/logo.mobile_@1x.png"
         alt="header-logo"
