--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -4,4 +4,58 @@
 
 .header__container {
   display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header__logo-link {
+  display: flex;
+  justify-content: flex-start;
+  margin-right: 292px;
+}
+
+.header__list {
+  display: flex;
+}
+
+.header__list-item:not(:last-child) {
+  margin-right: 27px;
+}
+
+.header__link {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(20 / 16);
+  display: flex;
+  align-items: center;
+  color: #fcfcfc;
+  &:hover,
+  &:focus {
+    color: #f8d24e;
+  }
+}
+
+.header__btn {
+  margin-left: auto;
+  padding: 0;
+  width: 152px;
+  height: 42px;
+  background-color: #f8d24e;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: calc(17 / 14);
+  color: #131313;
+
+  &:hover {
+    background-color: #0a8817;
+  }
+
+  &:focus {
+    background-color: #0a8817;
+    color: #fcfcfc;
+  }
 }
