--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -46,6 +46,7 @@
   border-radius: 10px;
   border: none;
   cursor: pointer;
+  font-weight: 600;
   font-size: 14px;
   line-height: calc(17 / 14);
   color: #131313;
