--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="section__contacts">
+<section class="section-contacts">
 <div class="container">
     <h2 class="visually-hidden">Our contacts</h2>
 
@@ -9,21 +9,21 @@
                     <li class="contacts__category">
                         <p class="contacts__representation">CAFE</p>
                     </li>
-                    <li class="contacts__city">
-                        <p class="">Chicago</p>
+                    <li>
+                        <p class="contacts__city">Chicago</p>
                     </li>
                     <li class="contacts__address">
-                        10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA
+                        <a class="link" href="">10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</a>
                     </li>
                     <li class="contacts-timetable">
                         <p class="contacts-timetable__day">Monday - Friday</p>
-                        <p class="contacts-timetable__time">06:00 AM - 10:00 PM</p>
+                        <p class="contacts-timetable__time contacts-timetable__time-week">06:00 AM - 10:00 PM</p>
                         <p class="contacts-timetable__day">Saturday - Sunday</p>
                         <p class="contacts-timetable__time">08:00 AM - 16:00 PM</p>
                     </li>
                     <li class="contacts-info">
-                        <a class="contacts-info__tel" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
-                        <a class="contacts-info__mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
+                        <a class="contacts-info__tel link" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+                        <a class="contacts-info__mail link" href="mailto:noreply@envato.com">noreply@envato.com</a>
                     </li>
                 </ul>
             </li>
@@ -37,17 +37,17 @@
                         <p class="">Los Angeles</p>
                     </li>
                     <li class="contacts__address">
-                        1003 Manhattan Ave, Manhattan Beach, CA 90263, USA
+                        <a class="link" href="">1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a>
                     </li>
                     <li class="contacts-timetable">
                         <p class="contacts-timetable__day">Monday - Friday</p>
-                        <p class="contacts-timetable__time">06:00 AM - 10:00 PM</p>
+                        <p class="contacts-timetable__time contacts-timetable__time-week">06:00 AM - 10:00 PM</p>
                         <p class="contacts-timetable__day">Saturday - Sunday</p>
                         <p class="contacts-timetable__time">08:00 AM - 16:00 PM</p>
                     </li>
                     <li class="contacts-info">
-                        <a class="contacts-info__tel" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
-                        <a class="contacts-info__mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
+                        <a class="contacts-info__tel link" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+                        <a class="contacts-info__mail link" href="mailto:noreply@envato.com">noreply@envato.com</a>
                     </li>
                 </ul>
             </li>
@@ -61,23 +61,26 @@
                         <p class="">New York</p>
                     </li>
                     <li class="contacts__address">
-                        726 Sterling Pl, Brooklyn, NY 11222, USA
+                        <a class="link" href="">726 Sterling Pl, Brooklyn, NY 11222, USA</a>           
                     </li>
                     <li class="contacts-timetable">
                         <p class="contacts-timetable__day">Monday - Friday</p>
-                        <p class="contacts-timetable__time">06:00 AM - 10:00 PM</p>
+                        <p class="contacts-timetable__time contacts-timetable__time-week">06:00 AM - 10:00 PM</p>
                         <p class="contacts-timetable__day">Saturday - Sunday</p>
                         <p class="contacts-timetable__time">08:00 AM - 16:00 PM</p>
                     </li>
                     <li class="contacts-info">
-                        <a class="contacts-info__tel" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
-                        <a class="contacts-info__mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
+                        <a class="contacts-info__tel link" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+                        <a class="contacts-info__mail link" href="mailto:noreply@envato.com">noreply@envato.com</a>
                     </li>
                 </ul>
             </li>
             </ul>
             
+            <div class="contacts_buttons">
             <button type="button" class="btn_location">Our Locations</button>
             <button type="button" class="btn_franchise">Franchise</button>
+            </div>
+
             </div>
             </section>
