--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,8 +1,7 @@
 // utils styles
-@import './common';
+@import './utils/common';
 @import './utils/variables';
 @import './utils/fonts';
-
 
 // @import './utils/normalize';
 @import './utils/visually-hidden';
